<resources>
    <string name="app_name">Florist-Vendor</string>

    <!-- Activity -->

    <!-- Error Messages and Title -->
    <string name="msg_connection_time_out">Connection Timeout.</string>
    <string name="msg_internet_unavailable">Please check your Wifi or Internet Data and Try Again!</string>
    <string name="msg_registering_user">Processing &#8230;</string>
    <string name="msg_reg_user_missing_input">Required parameters are missing. Please check and try again!</string>

    <!-- Login Page -->
    <string name="lbl_need_flower_central_account"><u>Need Flower Central Account?</u></string>
    <string name="lbl_app_name">~ Flower Central ~</string>
    <string name="lbl_app_tag">Your one stop flower shop</string>
    <string name="btn_try_again">Try Again</string>
    <string name="lbl_vendor_name">Vendor Name</string>
    <string name="lbl_vendor_tin">TIN</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_login">LOGIN</string>
    <string name="lbl_forgot_password"><u>Forgot Password?</u></string>

    <!-- Register -->
    <string name="lbl_register">REGISTER</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_state">State</string>
    <string name="lbl_city">City</string>
    <string name="lbl_country">Country</string>
    <string name="lbl_zip">Zip</string>
    <string name="lbl_phone1">Phone1</string>
    <string name="lbl_phone2">Phone2</string>
    <string name="lbl_email">Email</string>

    <!-- Navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_item_order">Orders</string>
    <string name="nav_item_sales_dashboard">Sales Dashboard</string>
    <string name="nav_item_profile">Profile</string>
    <string name="nav_item_feedback">View Feedback</string>
    <string name="nav_item_help">Help</string>
    <string name="nav_item_logout">Logout</string>
    <string name="project_url">http://flowercentral.com</string>

    <!-- Order fragment -->
    <string name="title_pending_order">Pending Orders</string>
    <string name="title_completed_order">Completed Orders</string>
    <string name="empty_pending_order_items">No pending order items</string>
    <string name="empty_completed_order_items">No completed order items</string>
    <string name="empty_help_items">No Help Details found.</string>
    <string name="order_format_price">$%s</string>
    <string name="order_format_quantity">Item: %s</string>
    <string name="order_format_schedule">Schedule: %s</string>
    <string name="order_format_delivered_at">Delivered At: %s</string>
    <string name="order_format_address">Address: %s</string>
    <string name="lbl_status_delivered">DELIVERED</string>
    <string name="btn_view_on_map">VIEW ON MAP</string>
    <string name="link_view_on_map"><u>View on map</u></string>
    <string name="key_latitude">latitude</string>
    <string name="key_longitude">longitude</string>
    <string name="key_address">address</string>
    <string name="key_is_draggable">isDraggable</string>

    <string name="s_required_permission_location">Grant permission to access location</string>
    <string name="s_action_request_again">Request</string>
    <string name="s_required_permission_settings">Grant permission in setting.</string>
    <string name="s_action_redirect_settings">Settings</string>
    <string name="s_required_permission_read_storage">Grant permission to read storage.</string>
    <string name="s_required_permission_phone_state">Grant permission to access phone state</string>

    <string name="order_details">Order Details</string>
    <string name="lbl_order_placed_schedule">Order Placed</string>
    <string name="lbl_order_total">Order Total</string>
    <string name="lbl_order_delievry_address">Delivery Address</string>
    <string name="lbl_is_scheduled_delievry">Scheduled Delivery</string>
    <string name="lbl_schedule">Schedule</string>
    <string name="lbl_status">Order Status</string>
    <string name="lbl_delivered_at">Delivered At</string>
    <string name="order_items">Items Details</string>
    <string name="key_order_id">order_id</string>
    <string name="title_profile">Profile</string>
    <string name="title_shop_pictures">Shop Pictures</string>
    <string name="title_change_password">Change Password</string>
    <string name="lbl_update">Update</string>
    <string name="lbl_cancel">Cancel</string>

    <string name="lbl_old_password">Old Password</string>
    <string name="lbl_new_password">New Password</string>
    <string name="lbl_confirm_new_password">Confirm New Password</string>
    <string name="lbl_reset_password">Reset Password</string>
    <string name="empty_feedback_list">No feedback items to show</string>

    <string name="map_error_unable_locate_address">Unable to locate the address.</string>

    <!-- Field validation error messages -->
    <string name="fld_error_user_name">Please enter user name.</string>
    <string name="fld_error_password">Please enter password.</string>
    <string name="fld_error_vendor_name">Please enter vendor name.</string>
    <string name="fld_error_email">Please enter email.</string>
    <string name="fld_error_address_for_map">Please enter address to locate on map.</string>
    <string name="fld_error_old_password">Please enter old password.</string>
    <string name="fld_error_new_password">Please enter new password.</string>
    <string name="fld_error_confirm_password">Please enter confirm new password.</string>
    <string name="message_password_mismatch">New password and confirm password does not match</string>

    <!-- web api keys -->
    <string name="api_key_username">username</string>
    <string name="api_key_password">password</string>
    <string name="api_key_imei">imei</string>
    <string name="api_key_device_id">deviceId</string>
    <string name="api_key_latitude">latitude</string>
    <string name="api_key_longitude">longitude</string>
    <string name="api_key_address">address</string>
    <string name="api_key_shop_name">shop_name</string>
    <string name="api_key_city">city</string>
    <string name="api_key_state">state</string>
    <string name="api_key_pin">pin</string>
    <string name="api_key_phone1">phone1</string>
    <string name="api_key_phone2">phone2</string>
    <string name="api_key_tin_num">tin_number</string>
    <string name="api_key_order_id">order_id</string>
    <string name="api_key_timestamp">timestamp</string>
    <string name="api_key_old_password">old_password</string>
    <string name="api_key_new_password">new_pass</string>
    <string name="api_key_confirm_password">confirm_new_password</string>
    <string name="lbl_accept">Accept</string>
    <string name="lbl_reject">Reject</string>
    <string name="api_res_status">status</string>
    <string name="api_key_picture_id">picture_id</string>
    <string name="msg_uploading_data">Please wait! uploading data to server</string>
    <string name="msg_data_upload_failed">Data upload failed.</string>
    <string name="btn_upload_pictures">Upload\nPictures</string>
    <string name="title_today">Today</string>
    <string name="title_weekly">Weekly</string>
    <string name="title_monthly">Monthly</string>
    <string name="lbl_total_sales_order">Total Orders : </string>
    <string name="lbl_total_sales">Total Sales :</string>
    <string name="colon">:</string>
    <string name="title_help">Help?</string>
    <string name="api_key_start_date">start_date</string>
    <string name="api_key_end_date">end_date</string>
    <string name="sales_stat_title">Order Stats</string>
    <string name="api_key_email">email</string>
    <string name="api_key_country">country</string>
    <string name="content_description">desc</string>
    <string name="lbl_search_hint">Search from/to orders</string>
    <string name="api_res_message">message</string>
</resources>
