<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_item_order"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/nav_item_order" />
    <item
        android:id="@+id/nav_item_sales_dashboard"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/nav_item_sales_dashboard" />
    <item
        android:id="@+id/nav_item_profile"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/nav_item_profile" />
    <item
        android:id="@+id/nav_item_feedback"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/nav_item_feedback" />

    <item
        android:id="@+id/nav_item_logout"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/nav_item_logout" />
    <item
        android:id="@+id/nav_item_help"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/nav_item_help" />

</menu>
